RESOLVED FIXED134029
[Curl] Compile errors related to http header field names.
https://bugs.webkit.org/show_bug.cgi?id=134029
Summary [Curl] Compile errors related to http header field names.
peavo
Reported 2014-06-18 07:49:14 PDT
Http header field names should now be specified with an enum, not a string.
Attachments
Patch (8.67 KB, patch)
2014-06-18 07:54 PDT, peavo
no flags
Patch (2.63 KB, patch)
2014-06-19 03:46 PDT, peavo
no flags
peavo
Comment 1 2014-06-18 07:54:27 PDT
Alex Christensen
Comment 2 2014-06-18 20:45:37 PDT
Sorry I didn't see this. I got a lot of these in https://trac.webkit.org/changeset/170132 but not all of them. This needs rebasing.
peavo
Comment 3 2014-06-19 03:46:27 PDT
peavo
Comment 4 2014-06-19 03:47:01 PDT
(In reply to comment #2) > Sorry I didn't see this. I got a lot of these in https://trac.webkit.org/changeset/170132 but not all of them. This needs rebasing. No worries, rebased :)
Alex Christensen
Comment 5 2014-06-19 09:10:41 PDT
looks good to me. reviewer?
Brent Fulgham
Comment 6 2014-06-19 10:50:23 PDT
Comment on attachment 233356 [details] Patch r=me
WebKit Commit Bot
Comment 7 2014-06-19 10:53:45 PDT
Comment on attachment 233356 [details] Patch Clearing flags on attachment: 233356 Committed r170153: <http://trac.webkit.org/changeset/170153>
WebKit Commit Bot
Comment 8 2014-06-19 10:53:48 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 9 2014-06-19 14:36:39 PDT
(In reply to comment #6) > (From update of attachment 233356 [details]) > r=me Thanks :)
Note You need to log in before you can comment on or make changes to this bug.