[Curl] Compile errors related to http header field names. https://bugs.webkit.org/show_bug.cgi?id=134029

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-06-19
Reviewed by Brent Fulgham.

Http header field names should now be specified with an enum, not a string.

* platform/network/curl/MultipartHandle.cpp:
(WebCore::MultipartHandle::didReceiveResponse):
* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::getProtectionSpace):

Canonical link: https://commits.webkit.org/152017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170153 268f45cc-cd09-0410-ab3c-d52691b4dbfc